styling improvement for shrinking effect on board page added; issue solved with horizontal scroll bar

--- a/css/board/board_responsive.css
+++ b/css/board/board_responsive.css
@@ -1,3 +1,13 @@
+@media (min-width: 1001px) {
+  #all-sections-container {
+    overflow-x: auto;
+  }
+
+  .board-section {
+    flex: 1 0 260px;
+  }
+}
+
 @media (max-width: 1000px) {
   main {
     box-sizing: unset;
